# enesim

./: .gitignore  .gitmodules  AUTHORS  CNAME  ChangeLog  Doxyfile  Makefile.am  README  README.md  TODO  TODO_Emage  TODO_etex  autogen.sh  configure.ac  emage.pc.in  enesim.pc.in  enesim_equanime.pc.in  enesim_opencl.pc.in  enesim_opengl.pc.in  etex.pc.in  index.html  params.json
emage/: Makefile.am  configure.ac
emage/examples/: Makefile.am  emage_example01.c  emage_example02.c
emage/include/: Emage.h  Enesim_Image.h  Makefile.am  emage_private.h
emage/lib/: Makefile.am  emage.c  emage_context.c  emage_data.c  emage_data_base64.c  emage_data_buffer.c  emage_data_file.c  emage_file.c  emage_provider.c
emage/modules/: Makefile.am  emage_jpg.c  emage_png.c  emage_raw.c
enesim/include/: Enesim_OpenGL.h  Makefile.am  enesim_buffer.h  enesim_compositor.h  enesim_matrix.h  enesim_private.h  enesim_rectangle.h  enesim_renderer.h  enesim_renderer_dispmap.h  enesim_renderer_figure.h  enesim_renderer_image.h  enesim_renderer_line.h  enesim_renderer_path.h  enesim_renderer_perlin.h  enesim_renderer_raddist.h  enesim_surface.h
enesim/include/private/: buffer.h  compositor.h  converter.h  mempool_buddy.h  path.h  renderer.h  shape.h  surface.h  vector.h
enesim/lib/: Makefile.am  enesim_buffer.c  enesim_color.c  enesim_converter.c  enesim_error.c  enesim_main.c  enesim_opengl.c  enesim_pool.c  enesim_renderer.c  enesim_renderer_opengl.c  enesim_renderer_sw.c  enesim_surface.c
enesim/lib/compositor/: Makefile.am
enesim/lib/converter/: Makefile.am
enesim/lib/pool/: Makefile.am  enesim_opencl.c  enesim_pool_eina.c
enesim/lib/rasterizer/: Makefile.am  enesim_rasterizer_basic.c  enesim_rasterizer_bifigure.c
enesim/lib/renderer/: Makefile.am  enesim_renderer_background.c  enesim_renderer_blur.c  enesim_renderer_checker.c  enesim_renderer_checker.glsl  enesim_renderer_circle.c  enesim_renderer_clipper.c  enesim_renderer_compound.c  enesim_renderer_ellipse.c  enesim_renderer_figure.c  enesim_renderer_gradient.c  enesim_renderer_gradient_linear.c  enesim_renderer_gradient_radial.c  enesim_renderer_image.c  enesim_renderer_importer.c  enesim_renderer_line.c  enesim_renderer_opengl_common_ambient.glsl  enesim_renderer_path.c  (+11 more)
enesim/tests/: Makefile.am  enesim_test_renderer_error.c
etex/: Doxyfile  Makefile.am  configure.ac
etex/data/: Makefile.am  etex.ender
etex/include/: Etex.h  Makefile.am  enesim_text_private.h  etex_private.h
etex/lib/: Makefile.am  etex.c  etex_base.c  etex_buffer.c  etex_font.c  etex_grid.c  etex_span.c
etex/tests/: Makefile.am  etex_test_buffer.c
src/: Makefile.am  Makefile_Compositor.am  Makefile_Converter.am  Makefile_Image.am  Makefile_Modules.am  Makefile_Pool.am  Makefile_Rasterizer.am  Makefile_Renderer.am  Makefile_Text.am  Makefile_Util.am
src/examples/: Makefile.am  Makefile.mk  Makefile_Examples.mk  emage_example01.c  enesim_draw_cache01.c  enesim_example_renderer.c  enesim_example_renderer.h  enesim_example_renderer_backend_glx.c  enesim_example_renderer_backend_image.c  enesim_example_renderer_backend_opencl_image.c  enesim_example_renderer_backend_wgl.c  enesim_image_example01.c  enesim_image_example02.c  enesim_renderer_background01.c  enesim_renderer_blur01.c  enesim_renderer_checker01.c  enesim_renderer_circle01.c  enesim_renderer_circle02.c  enesim_renderer_convolve01.c  enesim_renderer_example.h  enesim_renderer_gradient_linear01.c  enesim_renderer_gradient_radial01.c  enesim_renderer_hints01.c  enesim_renderer_image01.c  enesim_renderer_map_quad01.c  enesim_renderer_mask01.c  enesim_renderer_mask02.c  enesim_renderer_path01.c  enesim_renderer_path02.c  enesim_renderer_path03.c  enesim_renderer_path04.c  enesim_renderer_path05.c  enesim_renderer_path06.c  enesim_renderer_path07.c  enesim_renderer_pattern01.c  enesim_renderer_perlin01.c  enesim_renderer_raddist01.c  enesim_renderer_rectangle01.c  enesim_renderer_stripes01.c  enesim_renderer_text_span01.c  (+2 more)
src/include/: Enesim.h  Enesim_Equanime.h  Enesim_OpenCL.h  Enesim_OpenGL.h  Makefile.am  enesim_buffer.h  enesim_color.h  enesim_converter.h  enesim_curve.h  enesim_eina.h  enesim_error.h  enesim_main.h  enesim_matrix.h  enesim_pool.h  enesim_private.h  enesim_rectangle.h  enesim_renderer.h  enesim_renderer_background.h  enesim_renderer_checker.h  enesim_renderer_circle.h  enesim_renderer_clipper.h  enesim_renderer_compound.h  enesim_renderer_dispmap.h  enesim_renderer_ellipse.h  enesim_renderer_figure.h  enesim_renderer_gradient.h  enesim_renderer_gradient_linear.h  enesim_renderer_gradient_radial.h  enesim_renderer_grid.h  enesim_renderer_hswitch.h  enesim_renderer_image.h  enesim_renderer_importer.h  enesim_renderer_line.h  enesim_renderer_path.h  enesim_renderer_pattern.h  enesim_renderer_perlin.h  enesim_renderer_proxy.h  enesim_renderer_raddist.h  enesim_renderer_rectangle.h  enesim_renderer_shape.h  (+3 more)
src/lib/: Enesim.h  Enesim_OpenCL.h  Enesim_OpenGL.h  Makefile.am  Makefile.mk  Makefile_Core.mk  enesim_buffer.c  enesim_buffer.h  enesim_buffer_private.h  enesim_color.c  enesim_color.h  enesim_color_opencl.cl  enesim_color_opencl_private.cl  enesim_color_private.h  enesim_compositor.c  enesim_compositor_private.h  enesim_converter.c  enesim_converter.h  enesim_converter_private.h  enesim_curve_private.h  enesim_draw_cache.c  enesim_draw_cache.h  enesim_draw_cache_private.h  enesim_eina.c  enesim_eina.h  enesim_error.c  enesim_error.h  enesim_figure.c  enesim_figure.h  enesim_figure_private.h  enesim_format.c  enesim_format.h  enesim_image.c  enesim_image.h  enesim_image_private.h  enesim_log.c  enesim_log.h  enesim_log_private.h  enesim_main.c  enesim_main.h  (+41 more)
src/modules/: Makefile.am  Makefile.mk  emage_raw.c  enesim_image_jpg.c  enesim_image_png.c  enesim_image_raw.c
src/tests/: Makefile.am  Makefile.mk  Makefile_Tests.mk  enesim_test_damages.c  enesim_test_eina_pool.c  enesim_test_object01.c  enesim_test_opencl_pool.c  enesim_test_opengl_pool.c  enesim_test_renderer.c  enesim_test_renderer_error.c  enesim_test_renderer_pool.c  enesim_text_test_buffer.c
(+948 files in other folders)
